--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -1,4 +1,4 @@
-@import "./responsive.scss";
+@import "../../responsive.scss";
 .layout{
     //background-color: rebeccapurple;
     height:100vh;
@@ -7,19 +7,26 @@
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    flex-direction: column;
 
     @include lg{
-        background-color: whitesmoke;
+        // background-color: whitesmoke;
         max-width: 1280px;
     }
 
     @include md{
-        background-color: cornflowerblue;
+        // background-color: cornflowerblue;
         max-width: 768px;
     }
     
     @include sm{
-        background-color: coral;
+        // background-color: coral;
         max-width: 640px;
+     }
+
+     .content{
+        //background-color: rebeccapurple;
+        flex: 1;
      }
 }
