ui changes done

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -61,14 +61,17 @@ nav {
     a {
       padding: 12px 24px;
       margin: 20px;
+      display: flex;
+      align-items: center; /* Align items vertically center */
+      justify-content: center; /* Align items horizontally center */
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -76,20 +79,20 @@ nav {
         margin-right: 20px;
       }
 
-      span{
-        @include sm{
+      span {
+        @include sm {
           display: none;
         }
       }
 
-      .profile{
+      .profile {
         padding: 12px 24px;
         background-color: #fece51;
         cursor: pointer;
         border: none;
         position: relative;
-        
-        .notification{
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
@@ -102,7 +105,6 @@ nav {
           align-items: center;
           justify-content: center;
         }
-
       }
     }
 
