--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -3,9 +3,12 @@
 .homePage {
   display: flex;
   height: 100%;
+  position: relative;
 
   .textContainer {
     flex: 3;
+    position: relative;
+    z-index: 1; /* Ensure textContainer is below the nav */
 
     .wrapper {
       padding-right: 100px;
@@ -65,18 +68,20 @@
     position: relative;
     display: flex;
     align-items: center;
+    overflow: hidden; /* Ensure no overflow */
 
     @include md {
       display: none;
     }
 
     img {
-      width: 115%;
-      position: absolute;
-      right: 0;
+      width: 100%; /* Ensure image fits within container */
+      height: auto; /* Maintain aspect ratio */
+      position: relative; /* Adjust positioning if necessary */
+      right: 0; /* Adjust positioning if necessary */
 
       @include lg {
-        width: 105%;
+        width: 100%; /* Ensure image fits within container */
       }
     }
   }
